[package]
name = "rustls"
version = "0.15.2"
edition = "2018"
authors = ["Joseph Birr-Pixton <jpixton@gmail.com>"]
license = "Apache-2.0/ISC/MIT"
readme = "README.md"
description = "Rustls is a modern TLS library written in Rust."
homepage = "https://github.com/ctz/rustls"
repository = "https://github.com/ctz/rustls"
categories = ["network-programming", "cryptography"]

[dependencies]
base64 = { path = "./extdeps/base64-0.10.1" }
log = { path = "./extdeps/log-0.4.6", version = "0.4.6", optional = true }
ring = { path = "./extdeps/ring-0.14.6" } # "0.14.6"
sct = { path = "./extdeps/sct-0.5.0" } #"0.5.0"
untrusted = { path = "./extdeps/untrusted-0.6.2" }
webpki = { path = "./extdeps/webpki-0.19.1" }

[features]
default = ["logging"]
logging = ["log"]
dangerous_configuration = []
quic = []

[dev-dependencies]
#env_logger = "0.6.1"
#log = "0.4.0"
#tempfile = "3.0"
#webpki-roots = "0.16"
#criterion = "0.2"

[[example]]
name = "bogo_shim"
path = "examples/internal/bogo_shim.rs"
required-features = ["dangerous_configuration", "quic"]

[[example]]
name = "trytls_shim"
path = "examples/internal/trytls_shim.rs"

[[example]]
name = "bench"
path = "examples/internal/bench.rs"

[[bench]]
name = "benchmarks"
path = "tests/benchmarks.rs"
harness = false
